[package]
name = "aisdb"
edition = "2021"
version = "1.8.0-alpha"
authors = [ "AISViz Maintainers // aisviz@dal.ca",]

[lib]
crate-type = [ "cdylib", "rlib", ]
path = "src/lib.rs"

[dependencies]
geo = "0.29"
geo-types = "0.7"
nmea-parser = "0.11"
sysinfo = "0.33"

[build-dependencies]
wasm-opt = "0.116"
wasm-pack = "0.15"

[dependencies.futures]
version = "0.3"
features = [ "executor", "thread-pool",]

[dependencies.aisdb-lib]
path = "aisdb_lib"
features = [ "sqlite", "postgres",]

[dependencies.aisdb-receiver]
path = "receiver"

[dependencies.pyo3]
version = "0.25.1"
features = [ "extension-module", "generate-import-lib",]
