[package]
name = "aisdb"
edition = "2021"
version = "1.8.0-alpha"
authors = [ "AISViz Maintainers // mapslab@dal.ca",]

[lib]
crate-type = [ "cdylib", "rlib", ]
path = "src/lib.rs"

[dependencies]
geo = "0.26"
geo-types = "0.7"
nmea-parser = "0.10"
sysinfo = "0.29"

[build-dependencies]
wasm-opt = "0.112"
wasm-pack = "0.13"

[dependencies.futures]
version = "0.3"
features = [ "executor", "thread-pool",]

[dependencies.aisdb-lib]
path = "aisdb_lib"
features = [ "sqlite", "postgres",]

[dependencies.aisdb-receiver]
path = "receiver"

[dependencies.pyo3]
version = "0.29.0"
features = [ "extension-module",]
