[build-system]
requires = [ "maturin>=1.0", "numpy", "wheel", "patchelf", ]
build-backend = "maturin"

[project]
name = "aisdb"
requires-python = ">=3.8"
requires-dist = [ "maturin>=1.0", "numpy", "wheel", ]
dependencies = [
    "MarkupSafe", "flask", "packaging", "pillow", "requests", "selenium", "shapely",
    "toml", "tqdm", "numpy", "webdriver-manager", "psycopg", "psycopg[binary]",
    "python-dateutil", "orjson", "websockets","beautifulsoup4", "pyproj", "py7zr",
]
zip-safe = false
version = "1.7.2"
readme = "README"
description = "Smart AIS data storage and integration"
classifiers = [
    "Operating System :: POSIX :: Linux", "Programming Language :: Python :: 3.8", "Programming Language :: Python :: 3.9",
    "Topic :: Scientific/Engineering :: Information Analysis", "Topic :: Utilities", "Programming Language :: JavaScript",
    "Topic :: Scientific/Engineering :: GIS", "Intended Audience :: Developers", "Intended Audience :: Science/Research",
    "Programming Language :: SQL", "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Topic :: Database :: Database Engines/Servers", "Topic :: Database :: Front-Ends",
    "Programming Language :: Python :: 3.10", "Programming Language :: Rust",
]

[[project.authors]]
name = "[AISViz] Making vessels tracking data available to everyone"
email = "aisviz@dal.ca"

[project.license-files]
paths = [ "LICENSE", ]

[project.urls]
homepage = "https://aisviz.cs.dal.ca/"
repository = "https://github.com/AISViz/AISdb"
tutorials = "https://aisviz.gitbook.io/tutorials/"
documentation = "https://aisviz.gitbook.io/documentation/"

[project.optional-dependencies]
test = [ "coverage", "pytest", "pytest-cov", "pytest-dotenv", ]
docs = [ "sphinx", "sphinx-rtd-theme", ]
devel = []

[tool.maturin]
include = [
    "aisdb_web/dist_map_bingmaps/favicon.svg", "aisdb_web/dist_map_bingmaps/index.html",
    "pyproject.toml", "aisdb/*.py", "aisdb/aisdb_sql/*.sql", "aisdb/database/*.py", "aisdb/tests/*.py",
    "aisdb_lib/*", "aisdb_web/dist_map/assets/*", "aisdb_web/dist_map/favicon.png", "aisdb_web/dist_map/favicon.svg",
    "aisdb/tests/testdata/test_data_20210701.csv", "aisdb/tests/testdata/test_data_20211101.nm4", "aisdb/webdata/*.py",
    "aisdb_web/dist_map/index.html", "aisdb_web/dist_map_bingmaps/assets/*", "aisdb_web/dist_map_bingmaps/favicon.png",
]
bindings = "pyo3"
compatability = "manylinux2014"

[tool.pytest.ini_options]
testpaths = [ "aisdb/tests", ]
addopts = "--color=yes --cov-report term --cov-report html:docs/dist_coverage --cov=aisdb --cov=examples --doctest-modules --envfile .env"
