[build-system]
requires = ["maturin>=1.14.1,<2", "numpy", "wheel", "patchelf"]
build-backend = "maturin"

[project]
name = "aisdb"
version = "1.8.0a0"
description = "AIS data storage, query, cleaning, and visualization"
readme = "README.md"
requires-python = ">=3.10"
license = "AGPL-3.0-or-later"
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Database :: Database Engines/Servers",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "cdsapi",
    "cfgrib",
    "geopandas",
    "h3",
    "matplotlib",
    "numpy",
    "orjson",
    "pillow",
    "psycopg[binary]",
    "py7zr",
    "pyproj",
    "python-dateutil",
    "requests",
    "scipy",
    "shapely",
    "tqdm",
    "websockets",
    "xarray",
]

[[project.authors]]
name = "AISViz Maintainers"
email = "aisviz@dal.ca"

[project.urls]
homepage = "https://aisviz.cs.dal.ca/"
repository = "https://github.com/AISViz/AISdb"
documentation = "https://aisviz.gitbook.io/documentation/"
tutorials = "https://aisviz.gitbook.io/tutorials/"

[project.optional-dependencies]
test = ["coverage", "pytest", "pytest-cov"]
docs = ["sphinx", "sphinx-rtd-theme"]

[tool.maturin]
bindings = "pyo3"
include = [
    "pyproject.toml",
    "aisdb/*.py",
    "aisdb/aisdb_sql/*.sql",
    "aisdb/database/*.py",
    "aisdb/discretize/*.py",
    "aisdb/ports/*.py",
    "aisdb/weather/*.py",
    "aisdb/webdata/*.py",
    "aisdb/tests/*.py",
    "aisdb/tests/testdata/test_data_20210701.csv",
    "aisdb/tests/testdata/test_data_20211101.nm4",
    "aisdb_web/dist_map/index.html",
    "aisdb_web/dist_map/favicon.png",
    "aisdb_web/dist_map/favicon.svg",
    "aisdb_web/dist_map/assets/*",
    "aisdb_web/dist_map_bingmaps/index.html",
    "aisdb_web/dist_map_bingmaps/favicon.png",
    "aisdb_web/dist_map_bingmaps/favicon.svg",
    "aisdb_web/dist_map_bingmaps/assets/*",
    { path = "client_webassembly/Cargo.toml", format = "sdist" },
    { path = "client_webassembly/Cargo.lock", format = "sdist" },
    { path = "client_webassembly/src/*", format = "sdist" },
    { path = "aisdb_web/package.json", format = "sdist" },
    { path = "aisdb_web/package-lock.json", format = "sdist" },
    { path = "aisdb_web/map/*", format = "sdist" },
    { path = "aisdb_web/map/public/*", format = "sdist" },
]

[tool.pytest.ini_options]
testpaths = ["aisdb/tests"]
norecursedirs = ["aisdb_web", "docs", "target", ".venv"]
addopts = "--color=yes"

[tool.coverage.run]
source = ["aisdb"]
omit = ["aisdb/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
