[package]
version = "1.8.0-alpha"
name = "aisdb-lib"
authors = [ "AISViz Maintainers // aisviz@dal.ca",]
edition = "2021"
include = [ "../aisdb/aisdb_sql", "/src/*",]
build = "build.rs"
readme = "../readme.rst"
description = "AIS Database and Processing Utils"
homepage = "https://aisviz.cs.dal.ca/"
repository = "https://github.com/AISViz/AISdb"
tutorials = "https://aisviz.gitbook.io/tutorials/"
documentation = "https://aisviz.gitbook.io/documentation/"
license-file = "../LICENSE"

[features]
default = [ "sqlite", "postgres",]
sqlite = [ "dep:rusqlite",]
postgres = [ "dep:postgres",]

[lib]

[dependencies]
geo = "0.26"
geo-types = "*"
include_dir = "0.7.2"
md5 = "0.7"
flate2 = "1.0"
zip = "0.6"
tempfile = "3.8"
lazy_static = "1.4"

[dependencies.postgres]
version = "0.19"
optional = true

[dependencies.chrono]
version = "0.4.21"

[dependencies.csv]
version = "1.1"

[dependencies.nmea-parser]
version = "0.10"

[dependencies.rusqlite]
version = "0.29"
features = [ "bundled",]
optional = true

[profile.release]
lto = true
opt-level = 3
