[package]
name = 'aisdb'
version = '0.1.0'
authors = ['MERIDIAN // Matt Smith matthew.smith@dal.ca']
edition = '2021'
include = ['/src', ]

[lib]
name = 'aisdb_lib'
crate-type = ['cdylib']
path = 'src/lib.rs'
doc = true
test = true
doctest = false

[[bin]]
name = 'aisdb_bin'
path = 'src/bin.rs'
doc = true
test = false
doctest = false

[dependencies]
nmea-parser = {version = "0.8.0"}
rusqlite    = {version = "0.26"}
async-std   = {version = "1.10", features = ["attributes"] }
futures     = {version = "0.3.*"}
chrono      = {version = "0.4"}
pico-args   = {version = "0.4.2", features = ["eq-separator"]}
