[package]
version = '1.0.0'
name = 'aisdb'
authors = ['MERIDIAN // Matt Smith matthew.smith@dal.ca']
edition = '2021'
include = ['/src', ]

[[bin]]
name = 'aisdb'
path = 'src/bin.rs'
doc = true
test = true
doctest = false

[dependencies]
nmea-parser = {version = "0.9.0"}
rusqlite    = {version = "0.26"}
async-std   = {version = "1.10", features = ["attributes"] }
futures     = {version = "0.3"}
chrono      = {version = "0.4"}
pico-args   = {version = "0.4.2", features = ["eq-separator"]}
