[package]
name = "client"
version = "1.2.0"
edition = "2021"

[lib]
crate-type = [ "cdylib",]

[dependencies]
console_error_panic_hook = "0.1.7"
geo-types = "*"
geojson = "*"
js-sys = "0.3"
serde_json = "1"

[profile.release]
lto = true

[dependencies.geo]
version = "*"

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.wasm-bindgen]
version = "0.2"
features = [ "serde-serialize",]

[dependencies.web-sys]
version = "0.3.22"
features = [ "console",]
