[package]
name = "client"
version = "1.6.6"
edition = "2021"
authors = [ "MERIDIAN // Matt Smith matthew.smith@dal.ca",]
readme = "../../readme.rst"
description = "AIS Database and Processing Utils - Web Client WASM functions"
homepage = "https://aisdb.meridian.cs.dal.ca/"
documentation = "https://aisdb.meridian.cs.dal.ca/doc/readme.html"
repository = "https://git-dev.cs.dal.ca/meridian/aisdb"
license-file = "../../license.txt"

[lib]
crate-type = [ "cdylib",]

[dependencies]
console_error_panic_hook = "0.1.7"
geo-types = "*"
geojson = "*"
js-sys = "0.3"
serde-wasm-bindgen = "0.4"
serde_json = "1"

[dependencies.flate2]
version = "1.0"
features = [ "zlib",]

[dependencies.geo]
version = "*"

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.wasm-bindgen]
version = "0.2"
features = [ "serde-serialize",]

[dependencies.web-sys]
version = "0.3"
features = [ "console",]

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
