[package]
name = "client"
version = "1.8.0-alpha"
edition = "2021"
authors = [ "AISViz Maintainers // aisviz@dal.ca",]
readme = "../README.md"
description = "AIS Database and Processing Utils - Web Client WASM functions"
homepage = "https://aisviz.cs.dal.ca/"
documentation = "https://aisviz.gitbook.io/documentation/"
repository = "https://github.com/AISViz/AISdb"
license-file = "../LICENSE"

[lib]
crate-type = [ "cdylib",]

[dependencies]
console_error_panic_hook = "0.1.7"
geo-types = "0.7"
geojson = "1.0"
serde-wasm-bindgen = "0.6"
serde_json = "1"

[dependencies.geo]
version = "0.33"

[dependencies.serde]
version = "1.0"
features = [ "derive",]

[dependencies.wasm-bindgen]
version = "0.2.88"
features = [ "serde-serialize",]

[dependencies.web-sys]
version = "0.3"
features = [ "console",]

[profile.release]
lto = true

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[package.metadata.wasm-pack.profile.dev]
wasm-opt = false

[package.metadata.wasm-pack.profile.profiling]
wasm-opt = false
