[package]
name = "aisdb-db-server"
version = "1.8.0-alpha"
edition = "2021"
authors = [ "AISViz Maintainers // mapslab@dal.ca",]
readme = "../README.md"
description = "AIS Database and Processing Utils - Database Server"
homepage = "https://aisviz.cs.dal.ca/"
documentation = "https://aisviz.gitbook.io/documentation/"
repository = "https://github.com/MAPS-Lab/AISdb"
license-file = "../LICENSE"

[lib]
name = 'aisdb_db_server'
path = 'src/lib.rs'

[[bin]]
name = 'aisdb-db-server'
path = 'src/main.rs'

[dependencies]
aisdb-lib = {path = "../aisdb_lib", features=["postgres"]}

chrono = "0.4"
geo-types = "0.7"
geo = "0.26"
flate2 = {version = "1.0", features = ["zlib"]}
postgres = { version = "0.19", features=["with-serde_json-1"]}
serde= { version = "1", features = ["derive"] }
serde_json = { version = "1"}
tungstenite = { version = "0.29", features = ["rustls-tls-webpki-roots"]}
