#[package]
#version = "0.0.1"
#name = "dispatcher"
#authors = [ "Matt Smith matt24smith@gmail.com",]
#edition = "2021"
#description = "Network dispatcher client and logging server"

[workspace]
members = [ "dispatch", "client", "server", "proxy", "reverse_proxy", "testconfig"]


[profile.release]
lto = true
opt-level = "z"
strip = true
