#[package]
#version = "0.0.1"
#name = "dispatcher"
#authors = [ "Matt Smith matt24smith@gmail.com",]
#edition = "2021"
#description = "Network dispatcher client and logging server"

[workspace]
members = [ 
  "client", 
  "proxy", 
  "reverse_proxy", 
  "server", 
  "socket_dispatch", 
  "testconfig",
]

[profile.release]
lto = true
opt-level = "z"
strip = true

