[package]
name = "aisdb-receiver"
version = "0.0.1"
edition = "2021"
authors = [ "[AISViz] Making vessels tracking data available to everyone // aisviz@dal.ca",]
readme = "../readme.rst"
description = "AISDB Receiver"
homepage = "https://aisviz.github.io/"
repository = "https://github.com/AISViz/AISdb"
tutorials = "https://aisviz.gitbook.io/tutorials/"
documentation = "https://aisviz.gitbook.io/documentation/"
license-file = "../LICENSE"

[lib]

[[bin]]
name = "aisdb-receiver"
path = "src/receiver.rs"

[dependencies]
aisdb-lib = { path = "../aisdb_lib" }
mproxy-client = { version = "0.1" }
mproxy-server = { version = "0.1" }
mproxy-forward = { features = ["tls"], version = "0.1" }
mproxy-reverse = { version = "0.1" }

nmea-parser = { version = "0.10" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
tungstenite = {version = "0.20", features = ["rustls-tls-webpki-roots"]}
pico-args = { version = "0.5", features = [ "eq-separator",]}
