[package]
name = "aisdb-receiver"
version = "1.8.0-alpha"
edition = "2021"
authors = [ "AISViz Maintainers // mapslab@dal.ca",]
readme = "../README.md"
description = "AISDB Receiver"
homepage = "https://aisviz.cs.dal.ca/"
repository = "https://github.com/MAPS-Lab/AISdb"
documentation = "https://aisviz.gitbook.io/documentation/"
license-file = "../LICENSE"

[lib]

[[bin]]
name = "aisdb-receiver"
path = "src/receiver.rs"

[dependencies]
aisdb-lib = { path = "../aisdb_lib" }
mproxy-client = { version = "0.1.8" }
mproxy-server = { version = "0.1.8" }
mproxy-forward = { version = "0.1.8" }
mproxy-reverse = { version = "0.1.8" }

nmea-parser = { version = "0.10" }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
tungstenite = {version = "0.29", features = ["rustls-tls-webpki-roots"]}
pico-args = { version = "0.5.0", features = [ "eq-separator",]}
