[package]
name = 'rust_aisdb_pkg'
version = '0.1.0'
authors = ['Matt Smith matthew.smith@dal.ca']
edition = '2021'

[lib]
name = 'aisdb_lib'
crate-type = ['cdylib']
path = 'src/lib.rs'

[[bin]]
name = 'aisdb_bin'
path = 'src/bin.rs'

[dependencies]
nmea-parser = {version = "0.8.0"}
sqlx = { version = "0.5", features = ["sqlite", ] }
#futures = {version = "0.3.*"}
#sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite", "uuid", "chrono", "migrate" ] }
#chrono = "0.4"
#uuid = { version = "0.8", features = ["v4"] }
#clap = "2"
#tokio = {version = "1.15.*", features = ["full"]}
