[package]
name = "mproxy-client"
version = "0.1.6"
edition = "2021"

license = "MIT"
readme = "../readme.md"
repository = "https://github.com/matt24smith/mproxy-dispatcher"
description = "MPROXY: UDP Client. Stream local data to logging servers via UDP"
documentation = "https://docs.rs/mproxy-client/"


[[bin]]
name = "mproxy-client"

[lib]

[dependencies]
mproxy-socket_dispatch = { path = "../socket_dispatch", version = "0.1.6" }

[dependencies.pico-args]
version = "0.5.0"
features = [ "eq-separator",]

[dev-dependencies]
mproxy-server = {path = "../server"}
testconfig = {path = "../testconfig"}
