[package]
name = "mproxy-reverse"
version = "0.1.2"
edition = "2021"

license = "MIT"
readme = "../readme.md"
repository = "https://github.com/matt24smith/mproxy-dispatcher"
description = "MPROXY: Reverse Proxy. Send upstream data to downstream socket listeners."
documentation = "https://docs.rs/mproxy-reverse/"

[dependencies]
mproxy-socket_dispatch = {path = "../socket_dispatch", version = "0.1.2"}
mproxy-client = {path = "../client", version = "0.1.2"}
mproxy-forward = {path = "../proxy", version = "0.1.2"}
mproxy-server = {path = "../server", version = "0.1.2"}

[dependencies.pico-args]
version = "0.5.0"
features = [ "eq-separator",]

[dev-dependencies]
mproxy-client = {path = "../client"}
testconfig = {path = "../testconfig"}
