[package]
name = "server"
version = "0.1.0"
edition = "2021"

[lib]

[[bin]]
name = "server"

[dependencies]
socket_dispatch = {path = "../socket_dispatch"}

[dependencies.pico-args]
version = "0.5.0"
features = [ "eq-separator",]

[dev-dependencies]
client = {path = "../client"}
testconfig = {path = "../testconfig"}
